--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!--#include file="layout/header.html"-->
 
 <!--#include file="layout/menu-bar.html"-->
+<!-- <section class="page-index">
+	<div class="banner"></div>
+</section> -->
 <section class="page-index">
 	<div class="banner"></div>
+	<div class="item">
+		<h1>Ariel Liang</h1>
+		<p><a href="https://github.com/Ariel20" target="_blank">Github</a></p>
+		<p><a href="https://twitter.com/Ariel__Liang" target="_blank">Twitter</a></p>
+	</div>
 </section>
-
 <!--#include file="layout/footer.html"-->
